crates/wgso/tests/cases_invalid/directive_parsing/.expected
error: expected `compute` or `render`
 --> ./tests/cases_invalid/directive_parsing/main.wgsl:1:9
  |
1 | #shader<invalid> test
  |         ^
  |
error: unexpected tokens
 --> ./tests/cases_invalid/directive_parsing/main.wgsl:2:23
  |
2 | #shader<compute> test invalid
  |                       ^^^^^^^
  |